--- a/Final project code part 3 - Copy/templates/driver_dashboard.html
+++ b/Final project code part 3 - Copy/templates/driver_dashboard.html
@@ -14,7 +14,7 @@
     <div class="sidebar">
         <a href="#home">Driver Dashboard</a>
         <a href="/register">Register New AV</a>
-        <a href="/alerts">Alerts</a>
+        <!-- <a href="/alerts">Alerts</a> -->
         
     </div>
     <!-- Navigation Bar -->
